Adding email notification Adding an endpoint to return all users
