# API/swagger/openapi.yml
@@ -24,6 +24,8 @@ tags:
     description: Submission of documents for the trip
   - name: Universities
     description: All stuff about universities
+  - name: Users
+    description: All stuff about users
 
 
 paths:
@@ -178,24 +180,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/MessageResponse'
 
-  /api/v1/universities/all:
+  /api/v1/user/all:
     get:
       tags:
-        - Universities
-      summary: Get all universities
-      description: Retrieve a list of all universities
-      operationId: getAllUniversities
+        - Users
+      summary: Get all users
+      description: Retrieve a list of all users
+      operationId: getAllUsers
       responses:
         '200':
-          description: A list of universities
+          description: A list of users
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/University'
+                  $ref: '#/components/schemas/UserResponse'
         '400':
           description: Bad request - Invalid input data
+        '401':
+          description: Unauthorized
         '500':
           description: Internal server error - Unable to retrieve universities
 
@@ -540,6 +544,29 @@ components:
       properties:
         message:
           type: string
+
+    UserResponse:
+      type: object
+      properties:
+        first_name:
+          type: string
+          description: user name
+        last_name:
+          type: string
+          description: user surname
+        roles:
+          type: array
+          items:
+            type: string
+        username:
+          type: string
+          description:
+            user login into system
+        email:
+          type: string
+          description: user email
+
+
 
     AuthTokenResponseModel:
       type: object
