# BE/src/main/java/pl/m4zek/springjwtrefreshrolemongo/controller/UserController.java
@@ -1,0 +1,26 @@
+package pl.m4zek.springjwtrefreshrolemongo.controller;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+import pl.m4zek.springjwtrefreshrolemongo.service.UserService;
+
+@RestController
+@RequestMapping("/api/v1")
+public class UserController {
+
+    private final UserService userService;
+
+    public UserController(UserService userService) {
+        this.userService = userService;
+    }
+
+//    @PreAuthorize("hasRole('SUPERADMIN')")
+    @GetMapping("/user/all")
+    public ResponseEntity<?> getAllUsers(){
+        return ResponseEntity.ok(userService.findAllUsers());
+    }
+
+}
